trying to fix layout issues

--- a/style.css
+++ b/style.css
@@ -5,11 +5,18 @@ body{
 h1{
     text-align: center;
     font-family: "Rubik Pixels", system-ui;
-    font-weight: 400;
     font-style: normal;
+    font-size: xx-large;
 }
-p{
+#message{
     font-family: "Geist Mono", monospace;
     font-optical-sizing: auto;
     font-style: normal;
+    text-align: center;
+    font-size: xx-large;
+    
+}
+#genre-image{
+    height: 500px;
+    width: auto;
 }
